<resources>
    <string name="app_name">LanguageEducation2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="setting">Налаштування</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="next_ua">Далі</string>
    <string name="finish_ua">Закінчити</string>
    <string name="сorrect_ua">Правильно</string>
    <string name="wrong_ua">Неправильно</string>
    <string name="setting_ua">Налаштування</string>
    <string name="result_ua">Результат</string>
    <string name="numb_correct_answer_ua">Кількість правильних відповідей:</string>
    <string name="numb_wrong_answer_ua">Кількість неправильних відповідей:</string>
    <string name="check_ua">Перевірити</string>
    <string name="language_ua">Мова : </string>
    <string name="time_timer_ua">Тривалість таймеру :</string>
    <string name="test_with_variants">Тест з варіантами</string>
    <string name="test_with_input">Тест з введенням відповіді</string>
    <string name="time_is_end_ua">Час вийшов!\n</string>
    <string name="timer">Timer</string>
    <string name="input_translate">Введіть переклад</string>
    <string name="first_number_of_questions">Кількіть питань : 5</string>
    <string name="english">Англійська</string>
    <string name="german">Німецька</string>
    <string name="button_test_input">Тест з введенням відповіді</string>
    <string name="on_main_page_ua">На головну сторінку</string>


    <string-array name="english_word">
        <item>body</item>
        <item>house</item>
        <item>car</item>
        <item>tree</item>
        <item>cat</item>
        <item>dog</item>
        <item>book</item>
        <item>computer</item>
        <item>phone</item>
        <item>table</item>
        <item>chair</item>
        <item>flower</item>
        <item>sun</item>
        <item>moon</item>
        <item>water</item>
    </string-array>

    <string-array name="english_translate">
        <item>тіло</item>
        <item>будинок</item>
        <item>автомобіль</item>
        <item>дерево</item>
        <item>кіт</item>
        <item>собака</item>
        <item>книга</item>
        <item>комп\'ютер</item>
        <item>телефон</item>
        <item>стіл</item>
        <item>стілець</item>
        <item>квітка</item>
        <item>сонце</item>
        <item>місяць</item>
        <item>вода</item>
    </string-array>

    <string-array name="german_word">
        <item>Körper</item>
        <item>Haus</item>
        <item>Auto</item>
        <item>Baum</item>
        <item>Katze</item>
        <item>Hund</item>
        <item>Buch</item>
        <item>Computer</item>
        <item>Telefon</item>
        <item>Tisch</item>
        <item>Stuhl</item>
        <item>Blume</item>
        <item>Sonne</item>
        <item>Mond</item>
        <item>Wasser</item>
    </string-array>

    <string-array name="german_translate">
        <item>тіло</item>
        <item>будинок</item>
        <item>автомобіль</item>
        <item>дерево</item>
        <item>кіт</item>
        <item>собака</item>
        <item>книга</item>
        <item>комп\'ютер</item>
        <item>телефон</item>
        <item>стіл</item>
        <item>стілець</item>
        <item>квітка</item>
        <item>сонце</item>
        <item>місяць</item>
        <item>вода</item>
    </string-array>


</resources>