<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="36sp"
        android:text="@string/result_ua"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numb_correct_answer_ua"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/number_correct_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numb_wrong_answer_ua"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/number_wrong_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/to_main_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_main_page_ua"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF" />

</LinearLayout>
